
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int ) ;
 char* malloc (int) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int read (int,char*,int) ;
 int send (int,char*,int ,int ) ;
 int strlen (char*) ;

int pre_cmd(int sd,int precmd,int verbose){


 int rc, go = 0;
 char* buffer;
 char* line1;
 char* line2;
 switch(precmd){
  case 0:
   line1 = "EHLO test\n";
   line2 = "STARTTLS\n";
   break;
  case 1:
   line1 = "CAPA\n";
   line2 = "STLS\n";
   break;
  case 2:
   line1 = "a001 CAPB\n";
   line2 = "a002 STARTTLS\n";
   break;
  default:
   go = 1;
   break;
 }
 if(go==0){
  buffer = malloc(2049);
         if(buffer==((void*)0)){
                 printf("[ error in malloc()\n");
                 exit(0);
         }
  memset(buffer,0,2049);
  rc = read(sd,buffer,2048);
  printf("[ banner: %s",buffer);
  send(sd,line1,strlen(line1),0);
  memset(buffer,0,2049);
  rc = read(sd,buffer,2048);
  if(verbose==1){
   printf("%s\n",buffer);
  }
  send(sd,line2,strlen(line2),0);
  memset(buffer,0,2049);
  rc = read(sd,buffer,2048);
  if(verbose==1){
   printf("%s\n",buffer);
  }
 }
 return sd;
}
